--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,12 @@
   margin-left: 30px;
   margin-top: 30px;
 }
+
+li:hover {
+  cursor: default;
+}
+
+.selected {
+  color: red;
+  font size: 20px;
+}
