--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,34 @@
+body {
+  background: url("http://www.subtlepatterns.com/patterns/gplaypattern.png");
+}
+
+.container{
+  margin-left: 30px;
+}
+
+.top-row{
+  height: 300px;
+}
+
+.separator{
+  border-left: 4px solid white;
+  height: 100%;
+}
+
+.area-div{
+  display: inline-block;
+  margin-left: 50px;
+  font-size: 20px;
+}
+
 #canvas-box {
   display: block;
   margin-left: 30px;
   margin-top: 30px;
+}
+li {
+  font-size: 15px;
+  width: 200px;
 }
 
 li:hover {
@@ -9,6 +36,6 @@ li:hover {
 }
 
 .selected {
-  color: red;
-  font size: 20px;
+  color: orange;
+  font-size: 24px;
 }
