copied background image to img folder

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url("http://www.subtlepatterns.com/patterns/gplaypattern.png");
+  background: url("../img/gplaypattern.png");
 }
 
 .container{
