--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,21 @@
+@font-face {
+  font-family: 'Merkur';
+  src: url('../img/merkur.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
 body {
   background: url("../img/gplaypattern.png");
+}
+
+h1 {
+  font-family: Merkur;
+  font-size: 70px;
+}
+
+h3 {
+  text-align: center;
+  font-family: Merkur;
+  font-size: 50px;
 }
 
 .container{
@@ -7,7 +23,7 @@ body {
 }
 
 .top-row{
-  height: 300px;
+  height: 420px;
 }
 
 .separator{
@@ -24,8 +40,13 @@ body {
 #canvas-box {
   display: block;
   margin-left: 30px;
-  margin-top: 30px;
 }
+
+canvas {
+  display: block;
+  margin-top: 40px;
+}
+
 li {
   font-size: 15px;
   width: 200px;
